<resources>
    <string name="app_name">LoadApp</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>

    <string name="notification_channel_id">Channel ID</string>
    <string name="notification_channel_name">Channel Name</string>
    <string name="notification_channel_description">Channel Description</string>

    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_action">Check the status</string>

    <string name="button_download">Download</string>
    <string name="button_loading">We are loading </string>
    <string name="title_activity_detail">Status</string>

    <string name="radio_btn_glide">Glide - Image Loading Library by BumpTech</string>
    <string name="radio_btn_loadapp">LoadApp - Current repository by Udacity</string>
    <string name="radio_btn_retrofit">Retrofit - Type-safe Http client for Android and Java by Square, Inc</string>

    <string name="toast_select_file">Please select the file to download</string>
    <string name="text_file_name_label">File name:</string>
    <string name="text_status_label">Status:</string>
    <string name="dummy_long_text">long long long long long long long long long long long long long long long long long long long long long long long long long long long long</string>
</resources>
